--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
     </dependency>
     
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.3</version>
+    </dependency>
+    
+    <dependency>
       <groupId>org.glassfish</groupId>
       <artifactId>javax.json</artifactId>
       <version>1.0.4</version>
