--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,19 @@
       <artifactId>javax.json</artifactId>
       <version>1.0.4</version>
     </dependency>
+
+      <dependency>
+        <groupId>org.apache.jena</groupId>
+        <artifactId>apache-jena-libs</artifactId>
+        <type>pom</type>
+        <version>3.1.1</version>
+      </dependency>
+
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity</artifactId>
+      <version>1.7</version>
+    </dependency>
     
 
     <dependency>
