--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>edu.virginia.lib.avalon</groupId>
+  <groupId>edu.virginia.lib.preservation</groupId>
   <artifactId>preservation-manager</artifactId>
-  <version>1.0</version>
+  <version>4.0</version>
   <packaging>jar</packaging>
 
   <name>preservation-manager</name>
